--- a/config.make.in
+++ b/config.make.in
@@ -80,6 +80,7 @@ exceptions = @exceptions@
 multi-arch = @multi_arch@
 
 stubs-biarch_h = @stubs_biarch_h@
+lib-names_awk = @lib_names_awk@
 
 mach-interface-list = @mach_interface_list@
 
